@@ -940,6 +940,8 @@ Release 2.8.0 - UNRELEASED
     YARN-4255. container-executor does not clean up docker operation command files.
     (Sidharta Seethana via vvasudev)
 
+    YARN-4250. NPE in AppSchedulingInfo#isRequestLabelChanged. (Brahma Reddy Battula via rohithsharmaks)
+
 Release 2.7.2 - UNRELEASED
 
   INCOMPATIBLE CHANGES
